Mobile UI bug fixes (#55)
* Updated: glider offset on mobile

* Added: new tabs component

* Refactored: address view -> using new tabs component

* Fixed: missing metagraph name on mobile

* Fixed: additional condition for metagraph name on mobile

* Fixed: metagraph balances not showing on mobile

* RC: Updated: dor symbol missaligned

* RC: Updated: token balances dropdown -> amount list font size

--- a/src/components/MetagraphTokensSection/components/MetagraphTokensBalances.module.scss
+++ b/src/components/MetagraphTokensSection/components/MetagraphTokensBalances.module.scss
@@ -184,16 +184,7 @@
 
 @include respond-below(md) {
   .amountList {
-    font-size: 10px;
+    font-size: 12px;
     line-height: 15px;
-  }
-}
-
-@include respond-below(xlg) {
-  .selectedOptionBalance{
-    display: none;
-  }
-  .amountList {
-    display: none;
   }
 }
